[gd_scene load_steps=33 format=3 uid="uid://vs6j3vuwuki1"]

[ext_resource type="Theme" uid="uid://3mwqdmah8pd6" path="res://Assets/themes/default_theme.tres" id="1_ii6w6"]
[ext_resource type="Script" path="res://scenes/ui/menus/main_menu.gd" id="2_ooob7"]
[ext_resource type="Texture2D" uid="uid://dl3hsnnqrrcnd" path="res://Assets/Art/Entities/Fatnite/JumpNite-ezgif.com-gif-to-sprite-converter.png" id="3_12bas"]
[ext_resource type="Texture2D" uid="uid://c3ylf7xhssdx7" path="res://Assets/Art/Entities/Fatnite/Idle_Flat1-ezgif.com-gif-to-sprite-converter.png" id="4_p3o8w"]
[ext_resource type="Texture2D" uid="uid://dkwles13n50tk" path="res://Assets/Art/Entities/Frig/Fridge open close.png" id="5_kouuj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc0r5"]
size = Vector2(156.522, 11.3587)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pngq6"]
size = Vector2(70, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7887"]
atlas = ExtResource("3_12bas")
region = Rect2(0, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsx6x"]
atlas = ExtResource("3_12bas")
region = Rect2(24, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_eemae"]
atlas = ExtResource("3_12bas")
region = Rect2(48, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yknc"]
atlas = ExtResource("3_12bas")
region = Rect2(72, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_girbm"]
atlas = ExtResource("3_12bas")
region = Rect2(96, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq06q"]
atlas = ExtResource("3_12bas")
region = Rect2(0, 27, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_c06np"]
atlas = ExtResource("3_12bas")
region = Rect2(24, 27, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_cke4j"]
atlas = ExtResource("3_12bas")
region = Rect2(48, 27, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6po0"]
atlas = ExtResource("3_12bas")
region = Rect2(72, 27, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtmx0"]
atlas = ExtResource("3_12bas")
region = Rect2(96, 27, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh5me"]
atlas = ExtResource("4_p3o8w")
region = Rect2(0, 0, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_lseq7"]
atlas = ExtResource("4_p3o8w")
region = Rect2(19, 0, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci62h"]
atlas = ExtResource("4_p3o8w")
region = Rect2(38, 0, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix4sh"]
atlas = ExtResource("4_p3o8w")
region = Rect2(57, 0, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyk0j"]
atlas = ExtResource("4_p3o8w")
region = Rect2(76, 0, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hsqs"]
atlas = ExtResource("4_p3o8w")
region = Rect2(0, 26, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_76vl3"]
atlas = ExtResource("4_p3o8w")
region = Rect2(19, 26, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta8h5"]
atlas = ExtResource("4_p3o8w")
region = Rect2(38, 26, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_57o0n"]
atlas = ExtResource("4_p3o8w")
region = Rect2(57, 26, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw0in"]
atlas = ExtResource("4_p3o8w")
region = Rect2(76, 26, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbg3s"]
atlas = ExtResource("4_p3o8w")
region = Rect2(0, 52, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4143"]
atlas = ExtResource("4_p3o8w")
region = Rect2(19, 52, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_umi16"]
atlas = ExtResource("4_p3o8w")
region = Rect2(38, 52, 19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_m702h"]
atlas = ExtResource("4_p3o8w")
region = Rect2(57, 52, 19, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_exj8a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7887")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsx6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eemae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yknc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_girbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq06q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c06np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cke4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6po0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtmx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh5me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lseq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci62h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix4sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyk0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hsqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76vl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta8h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57o0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw0in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbg3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4143")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umi16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m702h")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ii6w6")
script = ExtResource("2_ooob7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0862745, 0.121569, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Fat Nite"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVbox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVbox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitGameButton")
focus_neighbor_bottom = NodePath("../QuitGameButton")
focus_next = NodePath("../QuitGameButton")
focus_previous = NodePath("../QuitGameButton")
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="QuitGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVbox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../StartGameButton")
theme_override_font_sizes/font_size = 24
text = "Quit Game"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0

[node name="StaticBody2D" type="StaticBody2D" parent="CanvasLayer/Control"]
position = Vector2(537, -1)
scale = Vector2(7.36001, 7.36001)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Control/StaticBody2D"]
position = Vector2(5.16303, 4.32064)
shape = SubResource("RectangleShape2D_fc0r5")

[node name="RigidBody2D" type="RigidBody2D" parent="CanvasLayer/Control"]
position = Vector2(860, -716)
rotation = 0.0174533

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/RigidBody2D"]
position = Vector2(-32.25, 1.67648)
scale = Vector2(7.85294, 7.85294)
texture = ExtResource("5_kouuj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Control/RigidBody2D"]
position = Vector2(-0.5, 1.10297)
shape = SubResource("RectangleShape2D_pngq6")

[node name="fatnite menu" type="RigidBody2D" parent="CanvasLayer/Control"]
position = Vector2(241, -710)
rotation = 0.0174533

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Control/fatnite menu"]
position = Vector2(-0.519135, 0.00907135)
rotation = -0.0174533
shape = SubResource("RectangleShape2D_pngq6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Control/fatnite menu"]
position = Vector2(-0.999912, 0.0174541)
rotation = -0.0174533
scale = Vector2(4.75, 4.75)
sprite_frames = SubResource("SpriteFrames_exj8a")
autoplay = "default"
frame = 23
frame_progress = 1.0

[connection signal="start_game" from="." to="." method="_on_start_game"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVbox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVbox/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
